2019. 7. 8. Added *RegZTK and *FromZTK, and reimplemented *FPrint for 3D primitives, polyhedra, NURBS, shape and multiple shapes. [zeo_ph, zeo_nurbs, zeo_prim, zeo_prim_box, zeo_prim_sphere, zeo_prim_cyl, zeo_prim_cone, zeo_prim_ellips, zeo_prim_ecyl, zeo_prim_ph, zeo_prim_nurbs, zeo_shape, zeo_mshape]
2019. 7. 8. Added zeo_prim and zPrim3DDivFromZTK. [zeo_prim]
2019. 7. 8. Added zVec3DFromZTK. [zeo_vec3d]
2019. 7. 8. Added zOpticalInfoRegZTK and zOpticalInfoFromZTK, and reimplemented zOpticalInfoFPrint based on the new specification of ZTK. [zeo_optic]
2019. 7. 8. Added zRGBFromZTK. [zeo_color]
2019. 7. 7. Renamed ZOPTIC_TAG and ZSHAPE_TAG to ZTK_TAG_OPTIC and ZTK_TAG_SHAPE. [zeo_optic, zeo_shape, zeo_mshape]
2019. 7. 6. Reflected renaming of zIndentF to zFIndent. [zeo_col_aabbtree]
2019. 7. 5. Added zECyl3DDefAxis. [zeo_prim_ecyl]
2019. 7. 4. Modified zRGBFPrint and zHSVFPrint. [zeo_color]
2019. 7. 3. Modified zSphere3DFPrint. [zeo_prim_sphere]
2019. 6.30. Added zPH3DFReadSTL, which automatically detects if the input STL file is in ASCII or binary format. [zeo_ph, app]
2019. 6.30. Renamed zPH3DFScanSTL, zPH3DFPrintSTL, zPH3DFReadSTL and zPH3DFWrite to zPH3DFReadSTL_ASCII, zPH3DFWriteSTL_ASCII, zPH3DFReadSTL_Bin and zPH3DFWriteSTL_Bin, respectively, and reimplemented them. [zeo_ph]
2019. 6.29. Added zVec3DListFind and zVec3DListReg. [zeo_vec3d_list]
2019. 6.28. Reflected new specifications of zStrList and zStrAddrList. [app]
2019. 6.28. Added zeo_stlconv. [app]
2019. 6.28. Added zPH3DFScanSTL, zPH3DFPrintSTL, zPH3DFReadSTL and zPH3DFWriteSTL. [zeo_errmsg, zeo_ph]
2019. 6.28. Debugged _zGJKSimplexClosest. [zeo_col_gjk]
2019. 6.17. Renamed *Clear to *Zero. [zeo_vec2d, zeo_mat2d, zeo_vec3d, zeo_mat3d, zeo_vec6d, zeo_mat6d, zeo_vec3d_pca, zeo_ep, zeo_pointcloud, zeo_elem, zeo_ph, zeo_nurbs, zeo_prim_cyl, zeo_prim_ecyl, zeo_bv_aabb, zeo_bv_obb, zeo_col_gjk, zeo_col_mpr]