@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.3.7
+VERSION=1.3.8
 
 DEPENDENCY="zeda=1.2.11;zm=1.2.4"
